--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "podcaster",
+  "homepage": "https://svarezm.github.io/podcaster/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.88",
     "axios": "^1.6.7",
     "env-cmd": "^10.1.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -20,6 +22,8 @@
   "scripts": {
     "start": "env-cmd -f .env.development webpack serve --mode development",
     "build": "env-cmd -f .env.production webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
